--- a/packages/snappy-site/styles.css
+++ b/packages/snappy-site/styles.css
@@ -1,3 +1,4 @@
+/* cspell:word csvg cpath */
 /* ---------------------------------------------------------------------------
    Design tokens: edit here to update styles across the site
    --------------------------------------------------------------------------- */
